# goby3-examples

./: CMakeLists.txt  COPYING  README.md  build.sh
.circleci/: config.yml
cmake_modules/: FindProtobufLocal.cmake  GobyClangTool.cmake
launch/frontseat_interface/: frontseat_basic_sim.launch
launch/frontseat_interface/config/: alpha.bhv  alpha.moos  frontseat.pb.cfg  gobyd.pb.cfg  liaison.pb.cfg
launch/interprocess/: basic_publisher_subscriber.launch  basic_publisher_subscriber_deployment.yml  gps_driver.launch  gps_driver_deployment.yml  hold.launch  hold_deployment.yml  json.launch  json_deployment.yml  log_control.launch  mavlink.launch  mavlink_deployment.yml  state_machine.launch  state_machine_deployment.yml
launch/interthread/: basic_interthread.launch  basic_interthread_deployment.yml
launch/intervehicle/basic/: basic_vehicle1.launch  basic_vehicle2.launch  gobyd-veh1.pb.cfg  gobyd-veh2.pb.cfg  publisher-veh1.pb.cfg  subscriber-veh2.pb.cfg
launch/intervehicle/broadcast/: broadcast_intervehicle_deployment.yml  broadcast_vehicle1.launch  broadcast_vehicle2.launch  broadcast_vehicle3.launch  gobyd-veh2.pb.cfg  gobyd-veh3.pb.cfg  subscriber-veh2.pb.cfg  subscriber-veh3.pb.cfg
launch/intervehicle/pluggable_driver/: gobyd-veh1.pb.cfg  gobyd-veh2.pb.cfg  subscriber-veh2.pb.cfg  vehicle1.launch  vehicle2.launch
launch/intervehicle/same_group/: gobyd-veh1.pb.cfg  same_group-veh1.pb.cfg  same_group-veh2.pb.cfg  vehicle1.launch  vehicle2.launch
launch/intervehicle/unsubscriber/: gobyd-veh1.pb.cfg  gobyd-veh2.pb.cfg  unsubscriber-veh2.pb.cfg  unsubscriber_vehicle2.launch
src/: CMakeLists.txt
src/basic_publisher/: CMakeLists.txt  config.proto  publisher.cpp
src/basic_subscriber/: config.proto  subscriber.cpp
src/components/: CMakeLists.txt
src/components/acomms/amac/amac_simple/: amac_simple.cpp
src/components/acomms/chat/: CMakeLists.txt  chat.cpp
src/components/acomms/dccl/dccl_simple/: CMakeLists.txt  dccl_simple.cpp
src/components/acomms/dccl/two_message/: CMakeLists.txt  two_message.cpp
src/components/acomms/modemdriver/: CMakeLists.txt
src/components/acomms/modemdriver/driver_simple/: driver_simple.cpp
src/components/acomms/modemdriver/pluggable_driver/: CMakeLists.txt  udp_multicast_driver.cpp  udp_multicast_driver.h  udp_multicast_driver.proto
src/components/acomms/modemdriver/whoi_ranging/: whoi_ranging.cpp
src/components/acomms/queue/encode_on_demand/: encode_on_demand.cpp
src/components/acomms/queue/multimessage/: CMakeLists.txt  multimessage.cpp
src/components/acomms/queue/queue_simple/: CMakeLists.txt  queue_simple.cpp
src/components/middleware/io/: CMakeLists.txt
src/components/middleware/io/can_example/: CMakeLists.txt  cansend.sh  config.proto  main.cpp
src/components/middleware/io/cobs_example/: CMakeLists.txt  config.proto  main.cpp
src/components/middleware/io/pty_example/: CMakeLists.txt  README.md  config.proto  main.cpp
src/components/middleware/io/serial_example/: CMakeLists.txt  README.md  config.proto  main.cpp
src/components/middleware/io/tcp_cobs_example/: CMakeLists.txt  config.proto  main.cpp
src/components/middleware/io/tcp_example/: CMakeLists.txt  main.cpp
src/components/middleware/io/udp_example/: CMakeLists.txt  config.proto  main.cpp
src/components/moos/: CMakeLists.txt
src/components/moos/abc_frontseat_driver/: CMakeLists.txt  abc_frontseat_driver.cpp  abc_frontseat_driver.h  abc_frontseat_driver_config.proto
src/components/moos/cfg/: README.md
src/components/moos/cfg/ccl_and_dccl/: README.md  generate.sh  mm.moos.in
src/components/moos/cfg/dual_status/: .gitignore  README.md  mm.moos.in
src/components/moos/gobyexample_protobuf/: CMakeLists.txt  simple_status.proto
src/components/util/: CMakeLists.txt
src/components/util/can_example/: CMakeLists.txt  README.md  main.cpp  setup_vcan.sh
src/components/util/flexostream_simple/: flexostream_simple.cpp
src/interprocess/: CMakeLists.txt
src/interprocess/basic_publisher/: CMakeLists.txt  config.proto  publisher.cpp
src/interprocess/basic_subscriber/: CMakeLists.txt  subscriber.cpp
src/interprocess/gps_driver/: CMakeLists.txt  config.proto  gps_controller.cpp  gps_driver.cpp  moos_plugin.cpp
src/interprocess/hold/: CMakeLists.txt  config.proto  publisher.cpp  subscriber.cpp
src/interprocess/json/: CMakeLists.txt  config.proto  nav.h  publisher.cpp  subscriber.cpp
src/interprocess/log_control/: CMakeLists.txt  config.proto  publisher.cpp
src/interprocess/mavlink/: CMakeLists.txt  app.cpp  config.proto
src/interprocess/state_machine/: CMakeLists.txt  config.proto  main.cpp  publisher.cpp  subscriber.cpp
src/interthread/: CMakeLists.txt
src/interthread/basic_publisher_subscriber/: CMakeLists.txt  config.proto  main.cpp  publisher.h  subscriber.h
src/intervehicle/: CMakeLists.txt
src/intervehicle/basic_publisher/: CMakeLists.txt  config.proto  publisher.cpp
src/intervehicle/basic_subscriber/: #subscriber.cpp#  CMakeLists.txt  config.proto  subscriber.cpp
src/intervehicle/broadcast/: CMakeLists.txt  README.md  config.proto  publisher.cpp  subscriber.cpp
src/intervehicle/same_group/: CMakeLists.txt  app.cpp  config.proto
src/intervehicle/unsubscriber/: CMakeLists.txt  config.proto  unsubscriber.cpp
src/messages/: CMakeLists.txt  gps.proto  groups.h  init.proto  io.h  nav.proto  nav_dccl.proto  state.proto
src/multi-thread/: CMakeLists.txt
src/multi-thread/basic_publisher_subscriber/: CMakeLists.txt  config.proto  main.cpp  publisher.h  subscriber.h
src/multi-thread/configurator/: CMakeLists.txt  config.proto  main.cpp  publisher.h  subscriber.h
src/multi-thread/gps_driver/: CMakeLists.txt  config.proto  gps_controller.cpp  gps_driver.cpp  moos_plugin.cpp
src/single-thread/: CMakeLists.txt
src/single-thread/basic_publisher/: CMakeLists.txt  config.proto  publisher.cpp
src/single-thread/basic_subscriber/: CMakeLists.txt  config.proto  subscriber.cpp
src/single-thread/state_machine/: CMakeLists.txt  config.proto  machine.h  main.cpp  publisher.cpp  subscriber.cpp
