find_package(MAVLink QUIET)

add_subdirectory(basic_publisher)
add_subdirectory(basic_subscriber)
add_subdirectory(state_machine)
add_subdirectory(gps_driver)
add_subdirectory(hold)
add_subdirectory(json)
if(MAVLink_FOUND)
    add_subdirectory(mavlink)
else()
    message(WARNING "Unable to build mavlink example. Mavlink libraries not found on system.")
endif()
add_subdirectory(log_control)
